--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the repository of my personal portfolio , feel free to look at the code and copy it.",
   "main": "index.js",
   "scripts": {
-    "build-sass": "sass ./sass/main.scss ./Styles/main.css -w --no-source-map"
+    "build-sass": "sass ./sass/main.scss ./styles/main.css -w --no-source-map"
   },
   "author": "",
   "license": "ISC",
